fixed alignment of cards

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,8 +73,9 @@ body {
   width: 80%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: 33% 33% 33%;
   gap: 4px;
+  margin-bottom: 3rem;
 }
 
 .link {
@@ -82,6 +83,7 @@ body {
   border-radius: 4px;
   text-decoration: none;
   box-shadow: 2px 2px 8px rgb(136, 126, 126);
+  width: 100%;
 }
 
 .row {
